--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "author": "estidlore",
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "sass": "^1.54.0"
   },
   "description": "",
