select component and notfound view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,12 @@
     "noUnusedParameters": true,
     "outDir": "dist",
     "paths": {
-      "components/*": [ "components/*" ],
+      "components/*": ["components/*"],
       "imgs/*": ["imgs/*"],
-      "styles/*": [ "styles/*" ],
-      "utils/*": [ "utils/*" ],
-      "views/*": [ "views/*" ],
+      "styles/*": ["styles/*"],
+      "types/*": ["types/*"],
+      "utils/*": ["utils/*"],
+      "views/*": ["views/*"],
     },
     "removeComments": true,
     "resolveJsonModule": true,
